added pom for packaging